# gsd-browser

./: AGENTS.md  AI_ENTRYPOINT.md  CLAUDE.md  GSD_BROWSER_BLUEPRINT.md  MCP_TEMPLATE_BLUEPRINT.md  Makefile  SESSION_CONTINUE.md  pipx_shared.pth  session_log.md  tasks.json
gsd-browser/: .env.example  .gitignore  Makefile  README.md  TEMPLATE_GUIDE.md  pyproject.toml
gsd-browser/config/: mcp-config-example.json
gsd-browser/docker/: compose.yml  entrypoint.sh
gsd-browser/docs/: CDP_STREAMING_BUG_FIX.md  SETUP.md  STREAMING.md  TROUBLESHOOTING.md  UPDATING.md
gsd-browser/scripts/: check-mcp-config.ps1  check-mcp-config.sh  diagnose.ps1  diagnose.sh  install-smoke-test.sh  mcp_tool_smoke.py  measure_stream_latency.py  print-mcp-config.py  prompt_comparison_harness.py  quick_fallback_test.py  real_world_sanity.py  run-local.sh  smoke-test.sh
gsd-browser/src/gsd_browser/: __init__.py  browser_install.py  browser_state.py  cli.py  config.py  failure_ranking.py  gsd_cli.py  legacy_cli.py  logging_utils.py  main.py  mcp_server.py  mcp_tool_policy.py  mcp_tool_smoke.py  real_world_sanity.py  run_event_capture.py  run_event_store.py  runtime.py  screenshot_manager.py  user_config.py
gsd-browser/tests/: test_browser_install.py  test_browser_state.py  test_cli_contract.py  test_mcp_tool_policy.py  test_real_world_sanity_a4.py  test_real_world_sanity_r2.py  test_real_world_sanity_r3.py  test_real_world_sanity_r4.py
gsd-browser/tests/dashboard/: test_security.py  (+1 more)
gsd-browser/tools/: install.ps1  install.sh  uninstall.ps1  uninstall.sh  upgrade.ps1  upgrade.sh
(+291 files in other folders)
