[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "gsd"
version = "0.1.0"
description = "GSD Browser MCP server"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "InboxGreen", email = "dev@inboxgreen.local" }
]
dependencies = [
  "click>=8.1.8,<8.2",
  "typer>=0.12,<0.13",
  "pydantic>=2.8,<3.0",
  "python-dotenv>=1.0,<2.0",
  "rich>=14,<15",
  "mcp>=1.6,<2.0",
  "fastapi>=0.110,<1.0",
  "browser-use>=0.11.2,<0.12",
  "python-socketio>=5.11,<6.0",
  "uvicorn[standard]>=0.27,<1.0"
]

[project.optional-dependencies]
dev = [
  "aiohttp>=3.10,<4.0",
  "httpx>=0.27",
  "pytest>=8.3",
  "ruff>=0.8",
  "mypy>=1.11"
]

[project.scripts]
gsd = "gsd_browser.gsd_cli:app"
"gsd-browser" = "gsd_browser.legacy_cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.hatch.build.targets.wheel]
packages = ["src/gsd_browser"]
include = [
  "src/gsd_browser/streaming/dashboard_static/**",
  "src/gsd_browser/custom_prompts/*.md"
]

[tool.hatch.build.targets.sdist]
include = [
  "src/gsd_browser",
  "scripts",
  "tools",
  "docker",
  "docs",
  "config",
  "tasks.json"
]
